z-index fix

--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ body {
   font-family: 'Overpass', sans-serif;
   position: relative;
   font-size: 50px;
-  z-index: 1;
+  z-index: -99;
   overflow: hidden;
   text-align: center;
   padding-top: 20px;
@@ -477,6 +477,8 @@ display: flex;
 #p-strat {
 	background-image: url(images/team/team-strat.jpg);
 }
+/* BLOG */
+
 
 /* NEWS */
 
